--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,14 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+upload_speed = 921600
+board_build.f_cpu = 240000000L
+monitor_filters = esp32_exception_decoder
+
+
+
+
+
 lib_deps = 
 	olikraus/U8g2@^2.35.8
 	olikraus/U8glib@^1.19.1
