--- a/platformio.ini
+++ b/platformio.ini
@@ -16,13 +16,9 @@ monitor_speed = 115200
 upload_speed = 921600
 board_build.f_cpu = 240000000L
 monitor_filters = esp32_exception_decoder
-
-
-
-
-
 lib_deps = 
 	olikraus/U8g2@^2.35.8
 	olikraus/U8glib@^1.19.1
 	adafruit/Adafruit SSD1306@^2.5.9
 	jgromes/RadioLib@^7.2.0
+	lennarthennigs/Button2@^2.3.5
